add scss transcompilation, added styling

--- a/services/client/src/styles/components/_header.scss
+++ b/services/client/src/styles/components/_header.scss
@@ -12,7 +12,7 @@
 }
 
 .header__subtitle {
-    color: $off-white;
+    color: $off-black;
     font-size: $m-size;
     font-weight: 500;
     margin: 0;
