--- a/services/client/src/styles/styles.scss
+++ b/services/client/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './base/settings';
 @import './base/base';
 @import './components/header';
-@import './components/header';
-@import './components/header';
+@import './components/container';
+@import './components/gene-entry';
+@import './components/gene-table';
