--- a/services/client/src/styles/base/_settings.scss
+++ b/services/client/src/styles/base/_settings.scss
@@ -1,10 +1,9 @@
 // Colors
+$light-green: #A4D27A;
+$green-blue: #6DC281;
+$turquoise: #28AAA8;
+$dark-blue: #2286B8;
 $off-black: #20222b;
-$off-white: #a5afd7;
-$dark-blue: #333745;
-$blue: #3c4251;
-$purple: #8357c5;
-$light-blue: #464b5e;
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
