--- a/services/client/src/styles/base/_base.scss
+++ b/services/client/src/styles/base/_base.scss
@@ -3,13 +3,14 @@ html {
 }
 
 body {
-    background: $dark-blue;
+    // background: $dark-blue;
     font-family: Arial, Helvetica, sans-serif;
     font-size: $m-size;
 }
 
 button {
   cursor: pointer;
+  font-size: $m-size;
 }
 
 button:disabled {
