--- a/services/client/src/styles/components/_header.scss
+++ b/services/client/src/styles/components/_header.scss
@@ -1,25 +1,18 @@
 .header {
-    background: $off-black;
-    color: white;
+    // background: $off-black;
+    color: $turquoise;
     margin-bottom: $xl-size;
-    padding: $m-size 0;
+    padding: $m-size $m-size;
+    text-align: center;
 }
 
-// BEM naming convention (block element modifier)
 .header__title {
     font-size: $l-size;
     margin: 0;
 }
 
-.header__subtitle {
-    color: $off-black;
-    font-size: $m-size;
-    font-weight: 500;
-    margin: 0;
-}
-
 @media (max-width: $desktop-breakpoint) {
-  .header {
-    margin-bottom: $m-size;
-  }
+    .header {
+        margin-bottom: $m-size;
+    }
 }
