add auto suggestion

--- a/services/client/src/styles/styles.scss
+++ b/services/client/src/styles/styles.scss
@@ -4,3 +4,4 @@
 @import './components/container';
 @import './components/gene-entry';
 @import './components/gene-table';
+@import './components/autosuggest';
