--- a/services/client/src/styles/styles.css
+++ b/services/client/src/styles/styles.css
@@ -41,23 +41,12 @@ button:disabled {
   font-style: italic;
   margin: 1.6rem 0 0 0;
   padding: 0 1.6rem;
-  text-align: center; }
-
-.gene-entry__input {
-  flex-grow: 1;
-  color: #20222b;
-  border: none;
-  border: 0.3rem solid #1e817f;
-  margin: 0 0 1.2rem 0;
-  padding: 1.2rem;
-  font-size: 2.25rem;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+  text-align: center;
+  margin: 0 0 1.2rem 0; }
 
 @media (min-width: 45rem) {
   .gene-entry {
-    flex-direction: row; }
-  .gene-entry__input {
-    margin: 0 1.2rem 0 0; } }
+    flex-direction: row; } }
 
 .gene-table__header {
   background: #2286B8;
@@ -74,3 +63,43 @@ button:disabled {
   word-wrap: break-word;
   word-spacing: 255px;
   font-size: 1.2rem; }
+
+.react-autosuggest__input {
+  flex-grow: 1;
+  color: #20222b;
+  padding: 1.2rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 2.25rem;
+  border: 0.3rem solid #1e817f;
+  margin: 0 1.2rem 0 0; }
+
+.react-autosuggest__input--focused {
+  outline: none; }
+
+.react-autosuggest__input--open {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0; }
+
+.react-autosuggest__suggestions-container--open {
+  display: block;
+  position: relative;
+  top: -16px;
+  left: 16px;
+  width: 280px;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  z-index: 2; }
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none; }
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px; }
+
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd; }
