fix table styles

--- a/services/client/src/styles/base/_settings.scss
+++ b/services/client/src/styles/base/_settings.scss
@@ -4,6 +4,9 @@ $green-blue: #6DC281;
 $turquoise: #28AAA8;
 $dark-blue: #2286B8;
 $off-black: #20222b;
+$off-white: #a5afd7;
+$input-border: .3rem solid darken($turquoise, 10%);
+
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
