--- a/services/client/src/styles/styles.css
+++ b/services/client/src/styles/styles.css
@@ -13,12 +13,14 @@ button:disabled {
   cursor: default; }
 
 .header {
-  color: #28AAA8;
   margin-bottom: 4.8rem;
   padding: 1.6rem 1.6rem;
   text-align: center; }
 
 .header__title {
+  background: -webkit-gradient(linear, left top, right bottom, from(#A4D27A), to(#2286B8));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-size: 3.2rem;
   margin: 0; }
 
@@ -48,21 +50,25 @@ button:disabled {
   .gene-entry {
     flex-direction: row; } }
 
+.gene-table {
+  flex: 1 0 auto;
+  background: -webkit-gradient(linear, left top, right bottom, from(#A4D27A), to(#2286B8)); }
+
 .gene-table__header {
-  background: #2286B8;
+  background: #A4D27A;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-transform: capitalize; }
 
 .gene-table__column {
+  font-size: 1.6rem;
+  font-family: monospace;
   white-space: pre-line !important;
   word-wrap: break-word;
-  font-size: 1.2rem; }
+  border: 1px solid #eff1f8 !important;
+  padding: 7px !important; }
 
-.gene-table__list-column {
-  white-space: pre-line !important;
-  word-wrap: break-word;
-  word-spacing: 255px;
-  font-size: 1.2rem; }
+.-btn {
+  background: #a5afd7 !important; }
 
 .react-autosuggest__input {
   flex-grow: 1;
@@ -83,14 +89,16 @@ button:disabled {
 .react-autosuggest__suggestions-container--open {
   display: block;
   position: relative;
-  top: -16px;
+  top: -19px;
   left: 16px;
   width: 280px;
-  border: 1px solid #aaa;
   background-color: #fff;
   font-family: Helvetica, sans-serif;
   font-weight: 300;
-  z-index: 2; }
+  z-index: 100;
+  border-left: 0.3rem solid #1e817f;
+  border-bottom: 0.3rem solid #1e817f;
+  border-right: 0.3rem solid #1e817f; }
 
 .react-autosuggest__suggestions-list {
   margin: 0;
@@ -102,4 +110,6 @@ button:disabled {
   padding: 10px 20px; }
 
 .react-autosuggest__suggestion--highlighted {
-  background-color: #ddd; }
+  background-color: #2286B8;
+  transition: all 0.3s ease-out;
+  color: #fff; }
