--- a/services/client/src/styles/components/_autosuggest.scss
+++ b/services/client/src/styles/components/_autosuggest.scss
@@ -19,14 +19,14 @@
 
 .react-autosuggest__suggestions-container--open {
   display: block;
-  position: relative;
-  top: -19px;
-  left: 16px;
+  position: absolute;
+  top: 194px;
+  left: 24px;
   width: 280px;
   background-color: #fff;
   font-family: Helvetica, sans-serif;
   font-weight: 300;
-  z-index: 100;
+  z-index: 100 !important;
   border-left: $input-border;
   border-bottom: $input-border;
   border-right: $input-border;
